--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "release-please",
   "packageManager": "yarn@3.2.4",
   "dependencies": {
+    "express": "^4.18.2",
     "release-please": "^15.11.0"
   }
 }
