--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "express": "^4.18.2",
     "release-please": "^15.11.0"
   },
+  "scripts": {
+    "serve": "node index.js"
+  },
   "version": "1.1.0"
 }
